--- a/my-project-backside/package.json
+++ b/my-project-backside/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "@midwayjs/bootstrap": "^3.12.0",
     "@midwayjs/core": "^3.16.2",
+    "@midwayjs/cross-domain": "^3.16.5",
     "@midwayjs/info": "^3.12.0",
     "@midwayjs/koa": "^3.12.0",
     "@midwayjs/logger": "^3.1.0",
