--- a/my-project/package.json
+++ b/my-project/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
