--- a/my-project-backside/package.json
+++ b/my-project-backside/package.json
@@ -11,7 +11,9 @@
     "@midwayjs/info": "^3.12.0",
     "@midwayjs/koa": "^3.12.0",
     "@midwayjs/logger": "^3.1.0",
-    "@midwayjs/validate": "^3.12.0"
+    "@midwayjs/upload": "^3.16.5",
+    "@midwayjs/validate": "^3.12.0",
+    "koa-body": "^6.0.1"
   },
   "devDependencies": {
     "@midwayjs/mock": "^3.12.0",
