--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "@midwayjs/upload": "^3.16.8",
     "class-transformer": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
+    "koa": "^2.15.3",
+    "koa-body": "^6.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "react-masonry-component2": "^1.0.10",
     "reflect-metadata": "^0.2.2",
