--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@midwayjs/upload": "^3.16.8",
+    "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
