--- a/my-project-backside/package.json
+++ b/my-project-backside/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^3.0.2",
     "@midwayjs/bootstrap": "^3.12.0",
     "@midwayjs/core": "^3.16.2",
     "@midwayjs/cross-domain": "^3.16.5",
@@ -13,7 +14,8 @@
     "@midwayjs/logger": "^3.1.0",
     "@midwayjs/upload": "^3.16.5",
     "@midwayjs/validate": "^3.12.0",
-    "koa-body": "^6.0.1"
+    "koa-body": "^6.0.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@midwayjs/mock": "^3.12.0",
