--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
+    "koa-router": "^12.0.1",
+    "koa-static": "^5.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "react-masonry-component2": "^1.0.10",
