--- a/my-project-backside/package.json
+++ b/my-project-backside/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-midway-project",
   "version": "1.0.0",
+  "main": "bootstrap.js",
   "description": "",
   "private": true,
   "dependencies": {
@@ -15,9 +16,11 @@
     "@midwayjs/upload": "^3.16.5",
     "@midwayjs/validate": "^3.12.0",
     "koa-body": "^6.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pm2": "^5.1.0"
   },
   "devDependencies": {
+    "@midwayjs/bundle-helper": "^1.3.0",
     "@midwayjs/mock": "^3.12.0",
     "@types/jest": "^29.2.0",
     "@types/node": "14",
@@ -32,14 +35,32 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production node ./bootstrap.js",
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop ecosystem.config.js",
+    "restart": "pm2 restart ecosystem.config.js",
     "dev": "cross-env NODE_ENV=local mwtsc --watch --run @midwayjs/mock/app.js",
     "test": "cross-env NODE_ENV=unittest jest",
     "cov": "jest --coverage",
     "lint": "mwts check",
     "lint:fix": "mwts fix",
     "ci": "npm run cov",
-    "build": "mwtsc --cleanOutDir"
+    "build": "mwtsc --cleanOutDir",
+    "pkg": "pkg . -d > build/pkg.log",
+    "bundle": "bundle && npm run build"
+  },
+  "bin": "bootstrap.js",
+  "pkg": {
+    "scripts": [
+      "bootstrap.js",
+      "src/**/*.js",
+      "node_modules/**/*"
+    ],
+    "assets": [
+      "public/**/*"
+    ],
+    "targets": [
+      "node18-win-x64"
+    ]
   },
   "repository": {
     "type": "git",
